--- a/index.html
+++ b/index.html
@@ -6,14 +6,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Create a to-do list for free">
     <title>ToDo List</title>
-    <link rel="stylesheet" href="css/site.css">
-    <script src="scripts/main.js"></script>
+    <link rel="stylesheet" href="css/site.css">   
+    <link rel="stylesheet" href="/node_modules/js-datepicker/dist/datepicker.min.css">   
 </head>
+
 <body>
 
     <header>
         <h1>Create your ToDo List</h1>
     </header>
+    <div id="create-item">
+        <label for="title">Title: </label>
+        <input id="title" type="text">
+        <span>*</span>
+        <br>
+
+        <label for="description">Description</label>
+        <textarea id="description" cols="25" rows="8"></textarea>
+        <span></span>
+        <br>
+
+        <label for="start-date">Start Date: </label>
+        <input id="start-date" class="due-date" type="text">
+        <span></span>
+        <br>
+        
+
+    </div>
     
+
+
+    <script src="/node_modules/js-datepicker/dist/datepicker.min.js"></script>
+    <script src="scripts/main.js"></script>
+    <script>
+        const picker = datepicker(".due-date");
+    </script>
 </body>
 </html>
