Initial ToDo item create form functional

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <h1>Create your ToDo List</h1>
     </header>
+
     <div id="create-item">
         <label for="title">Title: </label>
         <input id="title" type="text">
@@ -30,7 +31,25 @@
         <input id="start-date" class="due-date" type="text">
         <span></span>
         <br>
+
+        <label for="end-date">End Date: </label>
+        <input id="end-date" class="due-date" type="text">
+        <span></span>
+        <br>
         
+        <label for="is-complete">Is complete?</label>
+        <input id="is-complete" type="checkbox">
+        <br>
+
+        <label for="">Choose an urgency: </label>
+        <select name="" id="">
+            <option value="L">Low</option>
+            <option value="M">Medium</option>
+            <option value="H">High</option>
+        </select>
+        <br>
+
+        <button type="button">Add ToDo Item</button>
 
     </div>
     
