Add ToDo item in progress

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <br>
 
         <label for="">Choose an urgency: </label>
-        <select name="" id="">
+        <select id="urgency" name="" id="">
             <option value="L">Low</option>
             <option value="M">Medium</option>
             <option value="H">High</option>
