--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Create a to-do list for free">
     <title>ToDo List</title>
     <link rel="stylesheet" href="css/site.css">   
-    <link rel="stylesheet" href="/node_modules/js-datepicker/dist/datepicker.min.css">   
+    <link rel="stylesheet" href="css/datepicker.min.css">   
 </head>
 
 <body>
@@ -63,13 +63,13 @@
 
 
 
-    
+
 
     <div id="todo-list"></div>
 
 
     
-    <script src="/node_modules/js-datepicker/dist/datepicker.min.js"></script>
+    <script src="scripts/datepicker.min.js"></script>
     <script src="scripts/main.js"></script>
     <script>
         const picker = datepicker(".due-date");
